syntax = "proto3";


message SubscriblePayload {
   string uuid = 1;
   repeated string topics  = 2;
}

message NotifyPayload {
   string sender = 1;
   string title = 2;
   NotificationBody body  = 3;
}

message NotificationBody{
   string message = 1;
   string group = 2;
}

message Response{
   string message = 1;
   int32 statusCode = 2;
   string data = 3;
}

service NotificationServices  {
   rpc Subscribe(SubscriblePayload) returns (Response){}
   rpc Notify(stream NotifyPayload) returns (stream NotifyPayload){}
   
}
